--- a/nextflow.config
+++ b/nextflow.config
@@ -1,1 +1,10 @@
 process.container = 'quay.io/nextflow/bash'
+
+params {
+    word = 'word_params_config'
+}
+
+profiles {
+	czech { params.word = 'Ahoj_profiles' }
+	slovak { params.word = 'Nazdar_profiles' }
+}
