--- a/nextflow.config
+++ b/nextflow.config
@@ -5,6 +5,6 @@ params {
 }
 
 profiles {
-	czech { params.word = 'Ahoj_profiles' }
-	slovak { params.word = 'Nazdar_profiles' }
+	czech { params.word = 'czech_ahoj_profiles' }
+	slovak { params.word = 'slovak_nazdar_profiles' }
 }
